fixed wrong color in containeroutsidehead

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -363,7 +363,7 @@ html>body, html>body #contents {
 }
 
 .containerheadoutside {
-    background-color: #cceecc;
+    background-color: #aaccaa;
     font: bold 0.9em tahoma, verdana, sans-serif;
     paddingL 2px;
 }
